Bug 372636 - Quick Brush engine brushes dont generate mirror strokes when used with mirror tools
Summary: Quick Brush engine brushes dont generate mirror strokes when used with mirror...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
: 394933 396829 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-11-18 16:31 UTC by Raghavendra kamath
Modified: 2019-03-11 15:22 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Raghavendra kamath 2016-11-18 16:31:18 UTC
When the user click on the horizontal or vertical mirror tools in the tool bar , the brush strokes get mirrored, how ever this is not the case with the quick brush engine brushes.

dmitry said on IRC that this may not have been implemented yet. Hence I request for this feature. i know quick brush is limited with parameters but having ability to mirror strokes would be a plus.

How to reproduce 

- open krita and a new document
- Select a quick brush preset
- choose horizontal and vertical mirror tool from the tool bar
- start to draw

Actual result

- strokes are not mirrored

Expected result

- strokes should be mirrored when mirror tool are enabled

Thank you
Comment 1 Halla Rempt 2018-06-02 07:14:12 UTC
*** Bug 394933 has been marked as a duplicate of this bug. ***
Comment 2 bishounenthrall 2018-07-12 15:40:20 UTC
Can confirm this bug on my end. Running 4.1.0 Krita on Win 7 64x system.
Comment 3 Halla Rempt 2018-07-25 07:00:22 UTC
*** Bug 396829 has been marked as a duplicate of this bug. ***
Comment 4 Halla Rempt 2018-07-25 07:32:48 UTC
Dmitry estimates that this might take a couple of days of work to implement.
Comment 5 Stefano 2018-08-11 07:29:43 UTC
I almost submitted a new bug report, but I think I have a pretty similar bug:
brush _Basic-1 doesn't stroke on the other side when the mirror tools are enabled.
Comment 6 Halla Rempt 2018-08-11 07:49:02 UTC
That's not similar: that's exactly this.
Comment 7 Dmitry Kazakov 2019-03-11 15:22:30 UTC
Git commit af13a646ad31af13cdca857254fe8c703c050cfd by Dmitry Kazakov.
Committed on 11/03/2019 at 15:09.
Pushed by dkazakov into branch 'master'.

[FEATURE] Implement mirroring for Quick Brush

The patch implements mirroring capabilities for Quick Brush.
It just paints multiple "quick" strokes at the same time.

M  +51   -20   libs/image/kis_painter.cc
M  +12   -0    libs/image/kis_painter.h
M  +2    -0    libs/image/kis_painter_p.h
M  +9    -0    libs/image/krita_utils.cpp
M  +1    -0    libs/image/krita_utils.h
M  +18   -4    plugins/paintops/roundmarker/kis_roundmarkerop.cpp

https://commits.kde.org/krita/af13a646ad31af13cdca857254fe8c703c050cfd