[FEATURE] Implement mirroring for Quick Brush

The patch implements mirroring capabilities for Quick Brush.
It just paints multiple "quick" strokes at the same time.

BUG:372636